# sms-forwarder

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-static.sh
.cargo/: config.toml
src/: bark.rs  config.rs  main.rs  modem.rs  web.rs
