[package]
name = "sms-forwarder"
version = "0.1.0"
edition = "2021"

[profile.release]
# 发布版去掉符号，减小体积，便于分发
strip = true

[dependencies]
tokio = { version="1", features=["full"] }
axum = "0.7"
serde = { version="1", features=["derive"] }
serde_json = "1"
reqwest = { version="0.12", default-features = false, features=["json","rustls-tls"] }
percent-encoding = "2"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"] }

aes = "0.8"
cbc = "0.1"
cipher = "0.4"
base64 = "0.22"

anyhow = "1"
once_cell = "1"
tokio-serial = "5"
